# mahoraga-codec

./: .gitignore  LICENSE  README.md
alphabet_ceiling/: alphabet_ceiling.csv  compute_alphabet_ceiling.py
bench1/: plot_codec_comparison.py  plot_density_vs_r.py
bench2/: plot_matched_parity.py  plot_matched_parity_heatmap.py
bench3/: plot_bench3_gimpel_style.py  plot_dt4dds_pareto.py
bench4/: plot_longevity.py
codec/: pyproject.toml
codec/mahoraga_py/: __init__.py  identify.py  kmer_index.py  ldpc.py  llr_bridge.py  osd.py  peg.py  pipeline.py  rs16.py  rs_erasure.py  viterbi.py
codec/tests/: conftest.py  test_roundtrip.py  test_rs16.py  test_rs_erasure.py
data/bench1/: bench1_table.csv  codec_comparison_real.csv  dna_aeon-bench1-hifi-r0.02.json  dna_aeon-bench1-hifi-r0.05.json  dna_aeon-bench1-hifi-r0.1.json  dna_aeon-bench1-hifi-r0.2.json  dna_aeon-bench1-hifi-r0.3.json  dna_aeon-bench1-hifi-r0.5.json  dna_aeon-bench1-hifi-r1.0.json  dna_aeon-bench1-hifi-r10.0.json  dna_aeon-bench1-hifi-r2.0.json  dna_aeon-bench1-hifi-r5.0.json  dna_aeon-bench1-lofi-r0.02.json  (+51 more)
outputs/: shannon_fraction.csv  shannon_fraction_table.tex
paper/: stable1_bench1_full.md  stable1_bench1_full.tsv  stable2_bench2_full.md  stable2_bench2_full.tsv  stable3_dt4dds_full.md  stable4_bench4_success_rates.md  stable4_bench4_success_rates_1.tsv  stable4_bench4_success_rates_2.tsv  stable4_bench4_success_rates_3.tsv
scripts/: compute_shannon_fraction.py
shannon_fraction/: README.md  compute_shannon_fraction.py  shannon_fraction.csv  shannon_fraction_table.tex
(+757 files in other folders)
